--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,11 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "吴飞"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "A student in NUDT"
+  location         : "Chang Sha in China"
+  employer         : "National University of Defense Technology"
   uri              : # URL
   email            : "none@example.org" 
 
