--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "吴飞"
   pronouns         : # example: "she/her"  
   bio              : "A student in NUDT"
-  location         : "Chang Sha in China"
+  location         : "ChangSha,China"
   employer         : "National University of Defense Technology"
   uri              : # URL
   email            : "none@example.org" 
