--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ author:
   avatar           : "profile.png"
   name             : "吴飞"
   pronouns         : # example: "she/her"  
-  bio              : "A student in NUDT"
+  bio              : "A fourth undergraduate"
   location         : "ChangSha,China"
-  employer         : "National University of Defense Technology"
+  employer         : "NUDT"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "wu@nudt.edu.cn" 
 
   # Academic websites
   #arxiv            : # URL - Update with the correct link to your profile
