--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "mylogo.png"
   name             : "吴飞"
-  pronouns         : # example: "she/her"  
+  pronouns         : "he/his"  
   bio              : "A fourth undergraduate"
   location         : "ChangSha,China"
   employer         : "NUDT"
@@ -40,12 +40,12 @@ author:
   # researchgate     : # URL
 
   # Repositories and software development
-  bitbucket        : # Username - Update with your username on the site
-  codepen          : # Username
-  dribbble         : # Username
+  # bitbucket        : # Username - Update with your username on the site
+  # codepen          : # Username
+  # dribbble         : # Username
   github           : "https://Wufeiii.github.io"
-  kaggle           : # Username  
-  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
+  # kaggle           : # Username  
+  # stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
   # bluesky          : "bsky.app" # Replace this with you Bluesky username
