--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "Wufeiii/Wufeiii.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "mylogo.png"
+  avatar           : "mylogo2.png"
   name             : "吴飞"
   pronouns         : "he/his"  
   bio              : "A fourth undergraduate"
